# arango_cti_processor

./: .env.example  .env.markdown  .gitignore  README.md  arango_cti_processor.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: run-tests.yml
arango_cti_processor/: __init__.py  __main__.py  arango_processor.py  config.py  cpe_match.py  cti_processor.py  epss.py  utils.py
arango_cti_processor/managers/: __init__.py  base_manager.py  capec_attack.py  cwe_capec.py  d3fend_attack.py  technique_tactic.py
arango_cti_processor/tools/: utils.py
docs/: README.md  attack-capec.md  attack-techniques2tactics.md  capec-attack.md  capec-cwe.md  cve-cpe.md  cve-cwe.md  cve-epss.md  cwe-capec.md  d3fend-attack.md  d3fend-knowledgebases.md  sigma-attack.md  sigma-cve.md
examples/: README.md
tests/: README.md  delete_all_databases.py  temp_add_collections.py  test-data-research.md  test_00_run_all_tests.py  test_01_00_capec_to_attack.py  test_01_01_capec_to_attack.py  test_01_0_5_capec_to_attack.py  test_01_1_capec_to_attack.py  test_01_2_capec_to_attack.py  test_01_3_capec_to_attack.py  test_01_4_capec_to_attack.py  test_01_5_capec_to_attack.py  test_02_0_capec_to_cwe.py  test_02_1_capec_to_cwe.py  test_03_0_cwe_to_capec.py  test_03_1_cwe_to_capec.py  test_04_0_attack_to_capec.py  test_05_0_cve_to_cwe.py  test_05_1_cve_to_cwe.py  test_05_2_cve_to_cwe.py  test_06_0_cve_to_cpe.py  test_06_1_cve_to_cpe.py  test_06_2_cve_to_cpe.py  test_07_0_sigma_to_attack.py  test_07_1_sigma_to_attack.py  test_07_2_sigma_to_attack.py  test_08_0_sigma_to_cve.py  test_08_1_sigma_to_cve.py  test_08_2_sigma_to_cve.py  test_09_0_modified_min.py  test_09_1_created_min.py  test_0_run_all_tests.py  test_10_0_ignore_embedded_relationships_f.py  test_10_1_ignore_embedded_relationships_f.py  test_10_2_ignore_embedded_relationships_f.py  test_11_0_ignore_embedded_relationships_t.py  test_12_0_cve_epss.py  test_12_1_cve_epss.py  test_1_0_5_capec_to_attack.py  (+35 more)
tests/files/: actip-capec-condensed.json  actip-cwe-capec-controlled_created_times.json  actip-cwe-capec-controlled_modified_times.json  actip-cwe-condensed.json  (+22 more)
utilities/: QUICKSTART.md
(+11 files in other folders)
