[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arango_cti_processor"
version = "1.0.5"
authors = [
  { name = "dogesec" }
]
maintainers = [
  { name = "dogesec" }
]
description = "A small script that creates relationships between common CTI knowledge-bases in STIX 2.1 format."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "stix2",
    "python-arango>=8.1.3; python_version >= '3.8'",
    "tqdm>=4.66.4; python_version >= '3.7'",
    "jsonschema>=4.22.0; python_version >= '3.8'",
    "requests>=2.32.4; python_version >= '3.7'",
    "stix2arango"
  ]

[project.urls]
Homepage = "https://github.com/muchdogesec/arango_cti_processor"
Issues = "https://github.com/muchdogesec/arango_cti_processor/issues"
"dogesec HQ" = "https://dogesec.com"

[project.scripts]
arango_cti_processor = "arango_cti_processor.__main__:main"
